<resources>
    <string name="app_name">PetTracker</string>
    <string name="action_settings">Settings</string>
    <string name="gps_save_lbl">Saveuvegarder Zone</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_gps">GPS</string>
    <string name="lbl_btn_add_to_list">Ajouter GPS</string>
    <string name="lbl_btn_add_zone">Ajouter Zone</string>
    <string name="lbl_btn_remove_from_list">Enlever GPS</string>

    <string name="lbl_gps_name">Nom:</string>
    <string name="lbl_gps_id">ID:</string>
    <string name="lbl_gps_type">Image:</string>
    <string name="lbl_btn_image_pick">...</string>

    <string name="add_gps_message_dialog">Enter the following fields to add a GPS.</string>
    <string name="add_message">Ajouter</string>
    <string name="cancel_message">Annuler</string>

    <string name="add_zone_to_gps">Ajouter Zone</string>

    <string name="remove_zone">Enlever Zone</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Connexion ou Enregistrement</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="gps_selection_incorrect">You have no inputted any points. Please press on the map.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_menu">MapMenuActivity</string>
    <string name="title_activity_zone_map">ZoneMapActivity</string>
    <string name="title_activity_zone_list">ZoneListActivity</string>
</resources>
