<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <Button
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/add_zone_to_gps"
        android:id="@+id/btn_open_maps_view"
        android:singleLine="true" />

    <Button
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btn_remove_from_list"
        android:id="@+id/btn_delete_gps" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="Show Full Map"
        android:id="@+id/btn_full_map" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="Show Zones"
        android:id="@+id/btn_show_zones" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="Options"
        android:id="@+id/btn_options" />

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_message"
        android:id="@+id/btn_gps_info_cancel"
        android:layout_gravity="center_horizontal" />

</LinearLayout>