<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_gps_name"
                android:id="@+id/textView"
                android:layout_weight="0.15"
                android:gravity="left" />

            <EditText
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_gps_name"
                android:layout_weight="0.62"
                android:gravity="left"
                android:enabled="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_gps_id"
                android:id="@+id/textView2"
                android:layout_weight="0.01"
                android:gravity="left" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_gps_id"
                android:layout_weight="0.12"
                android:gravity="left"
                android:enabled="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_gps_type"
                android:id="@+id/textView3"
                android:layout_weight="0.02"
                android:gravity="left" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_gps_type"
                android:layout_weight="0.18"
                android:gravity="left"
                android:enabled="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_message"
                android:id="@+id/btn_add_gps_data"
                android:gravity="start" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_message"
                android:id="@+id/btn_cancel_gps_data"
                android:gravity="end" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
